feat: Added post template + version bump
